// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro with attachCreators: with attachCreators 1`] = `

import { status } from "patronum/status"; const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { status } from 'patronum/status';
const $status = status({
  ɔ: {
    effect,
  },
  config: {
    loc: {
      file: _effectorFileName,
      line: 1,
      column: 58,
    },
    name: '$status',
    sid: 'inq62s',
  },
});


`;

exports[`macro with fabrics and root import: with fabrics and root import 1`] = `

import { status } from "patronum"; const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { withFactory } from 'effector';
import { status } from 'patronum';
const $status = withFactory({
  sid: 'inq5wr',
  fn: () =>
    status({
      effect,
    }),
  name: '$status',
  method: 'status',
  loc: {
    file: _effectorFileName,
    line: 1,
    column: 51,
  },
});


`;

exports[`macro with fabrics: with fabrics 1`] = `

import { status } from "patronum/status"; const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { withFactory } from 'effector';
import { status } from 'patronum/status';
const $status = withFactory({
  sid: 'inq62s',
  fn: () =>
    status({
      effect,
    }),
  name: '$status',
  method: 'status',
  loc: {
    file: _effectorFileName,
    line: 1,
    column: 58,
  },
});


`;

exports[`macros renames import: renames import 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { debounce as _debounce } from '@effector/patronum';
import { status as _status } from '@effector/patronum';
import { withFactory } from 'effector';
const $status = withFactory({
  sid: 'j4rpgh',
  fn: () =>
    _status({
      effect,
    }),
});
const last = withFactory({
  sid: '-flsuql',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
});


`;

exports[`macros with macro: with macro 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { debounce as _debounce } from 'patronum';
import { status as _status } from 'patronum';
import { withFactory } from 'effector';
const $status = withFactory({
  sid: 'j4rpgh',
  fn: () =>
    _status({
      effect,
    }),
});
const last = withFactory({
  sid: '-flsuql',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
});


`;
